# learn-ia-rag

./: .gitignore
console-chat/: README.md  start.py
console-chat/app/: boot_HuggingFace.py  boot_llama.py  boot_openap_2.py  boot_openapi.py  main.py
console-chat/app/common/: app_constants.py
console-chat/app/common/helpers/: FileFunctions.py
console-chat2/: README.md  environment.yml  requirements.txt
console-chat2/app/: boot_llama.py  boot_openap_2.py  boot_openapi_1.py  chk.py  main.py
console-chat2/app/common/pymom/: RestartOnChangeHandler.py
console-chat2/app/common/rag/: embedding_generator_openapi.py
console-chat3/: Dockerfile  README.md  docker-compose copy.yml  docker-compose.yml  environment.yml  pyproject.toml
console-chat3.1/: README.md  pyproject.toml
console-chat3.1/app/: main.py
console-chat3/app/: boot_llama.py  boot_llama2.py  chk.py  chk_SessionState.py  main.py
console-chat3/app/common/: app_constants.py
console-chat3/app/common/Session/: SessionState.py  SocioBE.py  UsersRepository.py  UsersRepositorySingleton.py
console-chat3/app/common/helpers/: DateFunctions.py  LogFunctions.py
embbeding-whatcher/: .gitignore  readme.md
embbeding-whatcher/app/: .env  main.py  reload_runner.py  watcher.py
embbeding-whatcher/app/common/: app_constants.py
embbeding-whatcher/app/common/helpers/: DateFunctions.py
embbeding-whatcher/app/common/rag/: embedding_generator.py  embedding_generator_CsvLoader.py  embedding_generator_TextLoader.py  embedding_generator_openapi.py
