[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "moviedo",email = "moviedo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"  
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "huggingface-hub (>=0.33.4,<0.34.0)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "langchain-ollama (>=0.3.5,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
